Fix extra gap created by anchor block

--- a/uubloomington/uubloomington/static/css/uubloomington.css
+++ b/uubloomington/uubloomington/static/css/uubloomington.css
@@ -1145,3 +1145,7 @@ article.search-page .page-buttons {
     text-align: center;
 }
 /*End search styling*/
+
+.block-anchor {
+    margin-top: calc(var(--standard-gap) * -1);
+}
